k8s-resource-manifests/consul/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: consul
  namespace: sodalite-services
spec:
  ports:
  - name: consul
    port: 8500
    protocol: TCP
    targetPort: 8500
  - name: consul-discovery
    port: 8600
    protocol: UDP
    targetPort: 8600
  selector:
    app: consul
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
